# cdh_firmware_csdc5

./: .gitignore  CMakeLists.txt  default.nix  flash.sh  mem.ld  meson.build
cmake/: gcc.cmake  static.cmake
config/: stm32h7xx_hal_conf.h
meson/: cross_gcc.build
src/hardware/: interrupts.cpp  interrupts.h  uart.cpp  uart.h
src/os/: os.cpp
src/startup/: main.cpp  rad_testing.cpp  rad_testing.h  uarts.txt
src/util/: i2a.h  prandom.cpp
test/: rad-comp.py  rad-comp.sh  rad-target.sh
